[package]
name = "simple-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "homework"
path = "src/homework.rs"

[[bin]]
name = "homework2"
path = "src/homework2.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0", features = ["v4"] }
